# Baxter

./: README.md  main.py  pyproject.toml
data/: data_handler.py  historic_hdf5.py
event/: fill.py  market.py  order.py  signal.py
execution/: execution_handler.py  simulated.py
portfolio/: naive_portfolio.py  portfolio.py
src/baxter/: __main__.py
src/baxter/data/: data_handler.py  historic_hdf5.py
src/baxter/event/: event.py  fill.py  market.py  order.py  signal.py
src/baxter/strategy/: buynhold.py
src/evbax/data/: data_handler.py  historic_hdf5.py
src/evbax/event/: event.py  fill.py  market.py  order.py
src/evbax/types/: event_type.py  order_type.py
strategy/: buynhold.py  strategy.py
tests/: conftest.py  test_hdf5data.h5
tests/data/: test_historic_hdf5_data_handler.py
tests/event/: test_event.py  test_fill.py  test_market.py  test_order.py
tests/portfolio/: test_naive_portfolio.py
tests/strategy/: test_buynhold_strategy.py  test_strategy.py
